add slides 07 - Geometric sequences

--- a/06 - Arithmetic Sequences.tex
+++ b/06 - Arithmetic Sequences.tex
@@ -177,7 +177,7 @@
     \begin{column}{0.5\textwidth}
       A popular variety of question in middle school math contests involves series of geometric patterns.  Consider this question from MOEMS in December 2020:
       \begin{problem}
-        \centering
+        \hspace*{0.7em}
         \begin{mplibcode}
           u=0.25cm;
           s=0.63cm;
@@ -209,7 +209,6 @@
           drawdot (shift, -3*u);
           shift:=shift + u/1.5;
           drawdot (shift, -3*u);
-
         \end{mplibcode}
 
         Each figure in the sequence shown is composed entirely of $1 \times 1$ shaded squares.  If the pattern is continued, how many $1 \times 1$ shaded squares will there be altogether in the first $21$ figures?
