Fix 07 - Geometric Sequences

--- a/07 - Geometric Sequences.tex
+++ b/07 - Geometric Sequences.tex
@@ -41,7 +41,7 @@
       \emph{Binary fission} is the process by which bacterium divide into two identical daughter cells.
 
       \begin{problem}
-        After $3$ minutes of life, a bacterium divides into two new bacteria. New bacterium also split into two bacteria after $3$ minutes, and so on. One bacterium gets into a cup with a nutrient solution. How many bacteria will be in a cup after one hour?
+        After $3$ minutes of life, a bacterium divides into two new bacteria. A new bacterium also split into two bacteria after $3$ minutes, and so on. One bacterium gets into a cup with a nutrient solution. How many bacteria will be in a cup after one hour?
       \end{problem}
 
       After $3$ minutes, it would be $2$ bacteria. After $6$~minutes, it would be $4$ bacteria and so on. Every $3$~minutes amount of bacteria doubled. Since an hour contains $20$ $3$ minutes intervals, the number of bacteria will be doubled $20$ times. So total amount of bacteria after one hour would be 
@@ -66,7 +66,7 @@
           2,\ 2,\ 2,\ 2,\ 2,\ \ldots & 2 & 1
         \end{array}
       \]
-      Sequence can also have \emph{infinitely} many terms.
+      A sequence can also have \emph{infinitely} many terms.
 
       \begin{definition}
         A general term ($n$\textsuperscript{th} term) of a geometric sequence may be found using formula
@@ -102,7 +102,7 @@
       The initial term is $a$, the ratio is $r$, and we have a total of $n$ terms. Hence we have the following series
       \[ S = a + a \times r + a \times r^2 + \ldots + a \times r^{n–1}. \]Multiply it by $r$
       \[ S \times r = a \times r + a \times r^2 + \ldots + a \times r^{n–1} + a \times r^n. \]
-      Subtract initial sum
+      Subtract the initial sum
       \[ S \times r – S = a \times r^n – a. \]
       \vspace*{-1em}
       \begin{definition}
@@ -166,10 +166,10 @@
       Achilles, the ancient Greek hero, is chasing after a tortoise. Achilles is much faster than the tortoise, and so he must eventually catch up with it. 
       
       Zeno argued that on his way to catching the tortoise, Achilles must first reach the tortoise’s starting point. By the time he has reached this however, the tortoise will also have moved further forward to a new point. 
-      \begin{wrapfigure}[7]{r}{0.3\textwidth}
-        \vspace*{-1.2em}
-        \hspace*{-1em}
-        \includegraphics[width=0.4\textwidth]{07 - Geometric Sequences/zeno.jpg}
+      \begin{wrapfigure}[7]{r}{0.32\textwidth}
+        \vspace*{-2em}
+        \hspace*{-1.3em}
+        \includegraphics[width=0.45\textwidth]{07 - Geometric Sequences/zeno.jpg}
       \end{wrapfigure}
       By the time Achilles reaches this new point, the tortoise will have moved a bit further forward and so on. Every time Achilles reaches the point where the tortoise was, the tortoise has moved forwards to a new point. Hence Achilles \textbf{will never catch up}.
     \end{column}
@@ -182,9 +182,11 @@
       
       Time (s): $10 + 0.1 + 0.001 + 0.00001 + \ldots$
       
-      Let’s find the sums:
-      \[ \text{distance} = \frac{100}{1 - 0.01} = \frac{100}{0.99} \approx 101.0101 \text{ m}, \]\vspace*{-0.3em}
-      \[ \text{time} = \frac{10}{1 - 0.01} = \frac{10}{0.99} \approx 10.101 \text{ s}. \]
+      Let’s find the sums
+      \begin{align*}
+        \text{distance} &= \frac{100}{1 - 0.01} = \frac{100}{0.99} \approx 101.0101 \text{ m}, \\
+        \text{time} &= \frac{10}{1 - 0.01} = \frac{10}{0.99} \approx 10.101 \text{ s}.
+      \end{align*}
       As we see, “never” will happen $10.1$ seconds after the race begins, and Achilles catches the tortoise almost immediately when he gets to its starting point.
     \end{column}
   \end{columns}
