--- a/07 - Geometric Sequences.tex
+++ b/07 - Geometric Sequences.tex
@@ -241,7 +241,7 @@
         \item The first term of a geometric sequence is $1$, the third term is $4$. Find the second term. Is your answer the only possible one?
         \item Express the repeating decimal $0.636363\ldots$ as a fraction.
         \item Express the repeating decimal $0.9428571428571428\ldots$ as a fraction.
-        \item For what value of $x$ does the infinite geometric series $1 + x^2 + x^3 + \ldots = 4$?
+        \item For what value of $x$ does the infinite geometric series $1 + x + x^2 + x^3 + \ldots = 4$?
         \item If we subtract the geometric series $1 + \dfrac{1}{4} + \dfrac{1}{16} + \ldots$ from the infinite geometric series $1 + \dfrac{1}{2} + \dfrac{1}{4} + \ldots$, what is the sum of the resulting infinite geometric series?
         \seti
       \end{enumerate}
