--- a/07 - Geometric Sequences.tex
+++ b/07 - Geometric Sequences.tex
@@ -29,7 +29,7 @@
         This request was asking the king to sum the terms of a geometric series
         \[ 1 + 2 + 4 + 8 + \ldots + 2^{63}. \]
         The total amount of grains was
-        \[ 2^{64} – 1 = 18{,}446{,}744{,}073{,}709{,}551{,}615 \]which is enough to feed \emph{100 tons} of rice to every single human on Planet Earth.
+        \[ 2^{64} - 1 = 18{,}446{,}744{,}073{,}709{,}551{,}615 \]which is enough to feed \emph{100 tons} of rice to every single human on Planet Earth.
       \end{example}
     \end{column}
   \end{columns}
@@ -92,25 +92,25 @@
       Let’s multiply this sum (denoted as $S$) by the common ratio
       \[ 3S = 3 + 9 + 27 + 81 + 243 + 729 + 2187. \]
       It looks exactly the same as the original sum except $1$ has been replaced with $2187$.  So 
-      \[ 3S = S – 1 + 2187. \]
+      \[ 3S = S - 1 + 2187. \]
       Solving for $S$
       \[ S = \frac{2187 - 1}{3 - 1} = \frac{2186}{2} = 1093. \]
     \end{column}
     \begin{column}{0.5\textwidth}
       Let’s get general formula for a geometric series.
       
-      The initial term is $a$, the ratio is $r$, and we have a total of $n$ terms. Hence we have the following series
-      \[ S = a + a \times r + a \times r^2 + \ldots + a \times r^{n–1}. \]Multiply it by $r$
-      \[ S \times r = a \times r + a \times r^2 + \ldots + a \times r^{n–1} + a \times r^n. \]
+      The initial term is $a$, the ratio is $r$, and we have a~total of $n$ terms. Hence we have the following series
+      \[ S = a + a \times r + a \times r^2 + \ldots + a \times r^{n-1}. \]Multiply it by $r$
+      \[ S \times r = a \times r + a \times r^2 + \ldots + a \times r^{n-1} + a \times r^n. \]
       Subtract the initial sum
-      \[ S \times r – S = a \times r^n – a. \]
+      \[ S \times r - S = a \times r^n - a. \]
       \vspace*{-1em}
       \begin{definition}
         The sum of geometric sequence is
         \[ S = \frac{a \times r^n - a}{r - 1}\]
         \vspace*{-0.7em}
       \end{definition}
-      Note, if $r = 2$, the formula become $S = a \times 2^n – a$, which gives us the total amount of grains the Shah owes to the inventor of chess.
+      Note, if $r = 2$, the formula become $S = a \times 2^n - a$, which gives us the total amount of grains the Shah owes to the inventor of chess.
     \end{column}
   \end{columns}
 \end{frame}
@@ -147,7 +147,7 @@
       \end{wrapfigure}
       For positive numbers $r < 1$, as $n$ becomes arbitrarily large, $r^n$ \emph{tends to zero}. And, taking the \emph{limit of the sequence}, we can consider $r^n$ is equal to $0$ when $n$ goes to infinity.
       
-      Let’s apply this to the formula for the sum of a~geometric sequence when $–1 < r < 1$ and for infinite sequence.
+      Let’s apply this to the formula for the sum of a~geometric sequence when $-1 < r < 1$ and for infinite sequence.
       \[ S = \frac{a \times r^n - a}{r - 1} = \frac{-a}{r - 1} = \frac{a}{1 - r}. \]
       \begin{definition}
         The sum of an infinite geometric series with a~common ratio less than $1$ 
@@ -250,7 +250,7 @@
       \begin{enumerate}
         \conti
         \item Find a digit $d$, so $0.d25d25d25\ldots = \dfrac{n}{810}$ for some positive integer $n$.
-        \item Find a geometric sequence that $8$, $18$, and $27$ are terms of that sequence (not necessary adjacent).
+        \item Find a geometric sequence in which $8$, $18$, and $27$ are terms (not necessary adjacent).
       \end{enumerate}
     \end{column}
   \end{columns}
@@ -261,7 +261,7 @@
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
         \item Consider the alternating geometric series 
-        $1 – \dfrac{1}{2} + \dfrac{1}{4} – \ldots.$   What is the sum of all of the positive terms in the series?  What is the sum of all of the negative terms in the series?  Show that when you add these two sums together, the sum of the entire series agrees with the formula for an infinite geometric series whose first term is $1$, with a value of $r = -\dfrac{1}{2}$.
+        $1 - \dfrac{1}{2} + \dfrac{1}{4} - \ldots.$   What is the sum of all of the positive terms in the series?  What is the sum of all of the negative terms in the series?  Show that when you add these two sums together, the sum of the entire series agrees with the formula for an infinite geometric series whose first term is $1$, with a value of $r = -\dfrac{1}{2}$.
         \item Let $N$ be defined as the infinite series of square roots shown below.  What is the value of $N$?
         \[ N = \sqrt{2021 \sqrt{2021 \sqrt{2021 \sqrt{\ldots}}}}\]
         \item Find the way to represent a fraction started  $0.010204081632\ldots$ with just $4$ symbols.
