Add slides 08 - PIE

--- a/07 - Geometric Sequences.tex
+++ b/07 - Geometric Sequences.tex
@@ -260,8 +260,7 @@
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
-        \item Consider the alternating geometric series 
-        $1 - \dfrac{1}{2} + \dfrac{1}{4} - \ldots.$   What is the sum of all of the positive terms in the series?  What is the sum of all of the negative terms in the series?  Show that when you add these two sums together, the sum of the entire series agrees with the formula for an infinite geometric series whose first term is $1$, with a value of $r = -\dfrac{1}{2}$.
+        \item Consider the alternating geometric series $1 - \dfrac{1}{2} + \dfrac{1}{4} - \ldots.$   What is the sum of all of the positive terms in the series?  What is the sum of all of the negative terms in the series?  Show that when you add these two sums together, the sum of the entire series agrees with the formula for an infinite geometric series whose first term is $1$, with a value of $r = -\dfrac{1}{2}$.
         \item Let $N$ be defined as the infinite series of square roots shown below.  What is the value of $N$?
         \[ N = \sqrt{2021 \sqrt{2021 \sqrt{2021 \sqrt{\ldots}}}}\]
         \item Find the way to represent a fraction started  $0.010204081632\ldots$ with just $4$ symbols.
@@ -277,5 +276,14 @@
     \end{column}
   \end{columns}
 \end{frame}
+
+% \begin{frame}{Title}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
 
 \end{document}
