Fix solutions to 06 - Arithmetic Sequences

--- a/06 - Arithmetic Sequences solutions.tex
+++ b/06 - Arithmetic Sequences solutions.tex
@@ -184,7 +184,7 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
   \end{columns}
 \end{frame}
 
-\begin{frame}{Title}
+\begin{frame}{Challenge problems 3-4}
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{problem}
