--- a/06 - Arithmetic Sequences solutions.tex
+++ b/06 - Arithmetic Sequences solutions.tex
@@ -21,57 +21,57 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
 \begin{document}
 \maketitle
 
-\begin{frame}{Exercises}
-  \begin{columns}[T]
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \item Find the value of the expression
+% \begin{frame}{Exercises}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \item Find the value of the expression
         
-        $100-98+96-94+92-90+\cdots+8-6+4-2.$ %AMC8 2016, Problem 8
-        \item The sum of $25$ consecutive even integers is $10,000$. What is the largest of these $25$ consecutive integers? % AMC 8 2016, Problem 19
-        \item If the 7th term of an arithmetic sequence is $24$ and the 12th term is $48$, then what is
-        the 57th term? % https://www.mathcounts.org/sites/default/files/u50/MCMini3S.pdf
-        \item The first two terms of an arithmetic sequence are $4$, $10$. What is the first term greater
-        than $1000$? % https://www.mathcounts.org/sites/default/files/u50/MCMini12S.pdf
-        \item The sequence an has the property that $a_{n} = a_{n – 1} + 2a_{n-2}$ for $n \geq 2$. It is also
-        true that $a_0 = 4$ and $a_4 = 26$. What is the value of $a_{5}$? % Mathcounts 2022, chapter, problem 29
-        \seti
-      \end{enumerate}
-    \end{column}
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \conti
-        \item The 2020th term of an arithmetic sequence is $\dfrac{21}
-        {19}$ times the 2022nd term of the arithmetic sequence.
-        What is the value of the 2024th term of this sequence divided by the first term of this sequence? %Mathleague 12111, Problem 10
-        \item What is the value of
+%         $100-98+96-94+92-90+\cdots+8-6+4-2.$ %AMC8 2016, Problem 8
+%         \item The sum of $25$ consecutive even integers is $10,000$. What is the largest of these $25$ consecutive integers? % AMC 8 2016, Problem 19
+%         \item If the 7th term of an arithmetic sequence is $24$ and the 12th term is $48$, then what is
+%         the 57th term? % https://www.mathcounts.org/sites/default/files/u50/MCMini3S.pdf
+%         \item The first two terms of an arithmetic sequence are $4$, $10$. What is the first term greater
+%         than $1000$? % https://www.mathcounts.org/sites/default/files/u50/MCMini12S.pdf
+%         \item The sequence an has the property that $a_{n} = a_{n – 1} + 2a_{n-2}$ for $n \geq 2$. It is also
+%         true that $a_0 = 4$ and $a_4 = 26$. What is the value of $a_{5}$? % Mathcounts 2022, chapter, problem 29
+%         \seti
+%       \end{enumerate}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \conti
+%         \item The 2020th term of an arithmetic sequence is $\dfrac{21}
+%         {19}$ times the 2022nd term of the arithmetic sequence.
+%         What is the value of the 2024th term of this sequence divided by the first term of this sequence? %Mathleague 12111, Problem 10
+%         \item What is the value of
 
-        $1+2+3-4+5+6+7-8+\cdots+197+198+199-200$? % AMC 10a 2020 Problem 8
-        \item What is the greatest number of consecutive integers whose sum is $45$? % AMC 10a 2019 Problem 5
-      \end{enumerate}
-    \end{column}
-  \end{columns}
-\end{frame}
+%         $1+2+3-4+5+6+7-8+\cdots+197+198+199-200$? % AMC 10a 2020 Problem 8
+%         \item What is the greatest number of consecutive integers whose sum is $45$? % AMC 10a 2019 Problem 5
+%       \end{enumerate}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
 
-\begin{frame}{Challenge problems}
-  \begin{columns}[T]
-    \begin{column}{0.5\textwidth}
-      \begin{enumerate}
-        \item In how many ways can $345$ be written as the sum of an increasing sequence of two or more consecutive positive integers? % AMC10b, 2016, Problem 18
-        \item $852$ digits are used to number the pages of a book consecutively from page $1$. How many pages
-        are there in the book? %AOPS,1, Problem 453.
-        \item For every $n$ the sum of $n$ terms of an arithmetic progression is $2n + 3n^2$. What is the $r$th term of
-        the sequence in terms of $r$?
-        \item A sequence of natural numbers is constructed by listing the first
-        $4$, then skipping one, listing the next $5$, skipping $2$, listing $6$, skipping $3$, and on the nth
-        iteration, listing $n + 3$ and skipping $n$. The sequence begins $1$, $2$, $3$, $4$, $6$, $7$, $8$, $9$, $10$, $13$.
-        What is the $1000$th number in the sequence? % AMC10-2014-A24
-      \end{enumerate}
-    \end{column}
-    \begin{column}{0.5\textwidth}
-    \end{column}
-  \end{columns}
-\end{frame}
+% \begin{frame}{Challenge problems}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%       \begin{enumerate}
+%         \item In how many ways can $345$ be written as the sum of an increasing sequence of two or more consecutive positive integers? % AMC10b, 2016, Problem 18
+%         \item $852$ digits are used to number the pages of a book consecutively from page $1$. How many pages
+%         are there in the book? %AOPS,1, Problem 453.
+%         \item For every $n$ the sum of $n$ terms of an arithmetic progression is $2n + 3n^2$. What is the $r$th term of
+%         the sequence in terms of $r$?
+%         \item A sequence of natural numbers is constructed by listing the first
+%         $4$, then skipping one, listing the next $5$, skipping $2$, listing $6$, skipping $3$, and on the nth
+%         iteration, listing $n + 3$ and skipping $n$. The sequence begins $1$, $2$, $3$, $4$, $6$, $7$, $8$, $9$, $10$, $13$.
+%         What is the $1000$th number in the sequence? % AMC10-2014-A24
+%       \end{enumerate}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
 
 \begin{frame}{Exercises 1-3}
   \begin{columns}[T]
@@ -111,7 +111,7 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
         than $1000$?
       \end{problem}
       Knowing the first two terms of the arithmetic sequence are $4$, $10$ tells us the common difference is $10 - 4 = 6$. To get from $4$ to $1000$, we will need to add $1000 - 4 = 996$. This means we will have to start with $4$ and add $6$ a total of $996 / 6 = 166$ times. This will get us to exactly
-      $1000$. We will first exceed $1000$ by starting with $4$ and adding $6$ a total of $167$ times. The result $is 4 + 6 \cdot 167 = \boxed{1006}$.
+      $1000$. We will first exceed $1000$ by starting with $4$ and adding $6$ a total of $167$ times. The result is $4 + 6 \cdot 167 = \boxed{1006}$.
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{problem}
