Add solutions to 07 - Geometric sequences

--- a/07 - Geometric Sequences.tex
+++ b/07 - Geometric Sequences.tex
@@ -237,12 +237,12 @@
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
-        \item Find the third term of the geometric sequence $2$, $3$, $\ldots$
-        \item The first term of a geometric sequence is $1$, the third term is $4$. Find the second term. Is your answer the only possible one?
-        \item Express the repeating decimal $0.636363\ldots$ as a fraction.
-        \item Express the repeating decimal $0.9428571428571428\ldots$ as a fraction.
-        \item For what value of $x$ does the infinite geometric series $1 + x + x^2 + x^3 + \ldots = 4$?
-        \item If we subtract the geometric series $1 + \dfrac{1}{4} + \dfrac{1}{16} + \ldots$ from the infinite geometric series $1 + \dfrac{1}{2} + \dfrac{1}{4} + \ldots$, what is the sum of the resulting infinite geometric series?
+        \item Find the third term of the geometric sequence $3$, $4$, $\ldots$
+        \item The first term of a geometric sequence is $1$, the third term is $9$. Find the second term. Is your answer the only possible one?
+        \item Express the repeating decimal $0.3636363\ldots$ as a fraction.
+        \item Express the repeating decimal $0.428571428571428\ldots$ as a fraction.
+        \item For what value of $x$ does the infinite geometric series $1 + x + x^2 + x^3 + \ldots = 5$?
+        \item If we subtract the geometric series $1 + \dfrac{1}{9} + \dfrac{1}{81} + \ldots$ from the infinite geometric series $1 + \dfrac{1}{3} + \dfrac{1}{9} + \ldots$, what is the sum of the resulting infinite geometric series?
         \seti
       \end{enumerate}
     \end{column}
@@ -260,18 +260,24 @@
   \begin{columns}[T]
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
-        \item Consider the alternating geometric series $1 - \dfrac{1}{2} + \dfrac{1}{4} - \ldots.$   What is the sum of all of the positive terms in the series?  What is the sum of all of the negative terms in the series?  Show that when you add these two sums together, the sum of the entire series agrees with the formula for an infinite geometric series whose first term is $1$, with a value of $r = -\dfrac{1}{2}$.
-        \item Let $N$ be defined as the infinite series of square roots shown below.  What is the value of $N$?
-        \[ N = \sqrt{2021 \sqrt{2021 \sqrt{2021 \sqrt{\ldots}}}}\]
-        \item Find the way to represent a fraction started  $0.010204081632\ldots$ with just $4$ symbols.
+        \item The fraction
+        \[
+        \frac{1}{99^2} = 0.\overline{b_{n−1}b_{n−2} \ldots b_2b_1b_0},
+        \]
+        where $n$ is the length of the period of the repeating decimal expansion. What is the sum $b_0 + b_1 + \ldots + b_{n−1}$? %2014 AMC 12A #23
+        \item Give the base ten, common fraction representation for $0.\overline{123}_4$ (base $4$). % NC Math League
+        \item Two geometric sequences $a_1,\ a_2,\ a_3,\ \ldots$ and $b_1,\ b_2,\ b_3,\ \ldots$ have the same common ratio, with $a_1 = 27$, $b_1=99$, and $a_{15}=b_{11}$. Find $a_5$. % AIME-2012-II-2
         \seti
       \end{enumerate}
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
         \conti
-        \item A pirate captures $4$ math Olympiad team members named Alex, Beth, Colette, and Daniel.  He hands them a standard pair of $6$-sided dice and says, “I am going to have some fun with you.  You will take turns rolling the dice in alphabetical order (A, B, C, D, A, B, C, D, A, ..), and keep rolling until one of you rolls the dice so they sum to $7$. 
-        I will set the first kid to roll a $7$ free and execute the rest, unless you can tell me what the probability of Daniel winning the game is, in which case I will let you all go.”  What is the answer to the pirate’s question (what is the probability that the last of the $4$ players to roll will win this game)?  Would Daniel’s odds of winning go up or down if players needed to roll double $6$’s instead of $7$ to win the game?
+        \item The very hungry caterpillar lives on the number line. For each non-zero integer $i$, a fruit sits on the
+        point with coordinate $i$. The caterpillar moves back and forth; whenever he reaches a point with food,
+        he eats the food, increasing his weight by one pound, and turns around. The caterpillar moves at a
+        speed of $2^{−w}$ units per day, where $w$ is his weight. If the caterpillar starts off at the origin, weighing
+        zero pounds, and initially moves in the positive $x$ direction, after how many days will he weigh $10$ pounds? %HMMT Nov-2016-Guts-14
       \end{enumerate}
     \end{column}
   \end{columns}
